[#2472283] SonarQube/Veracode quality improvements